add common router
